--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="container">
+         <h1 style="text-align: center;color: red;" id="name">AbdelHakim___JS</h1>
         <h2 id="h1">Memory Game !!</h2>
         <div class="game"></div>
         <span id="SpanScore" style="color: red;font-size: 20px;">
